--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ opencv-python==4.5.2.52
 pytesseract==0.3.7
 matplotlib==3.4.2
 imutils==0.5.4
-numpy
 matplotlib==3.*
 seaborn==0.10.1
 pandas
+whatimage==0.0.3
+Pillow==8.2.0
+wheel
